Add filter and field start time and end time
