# router/campaign_router.go
@@ -11,6 +11,6 @@ func SetCampaignRoutes(v1 *echo.Group) {
 	v1.POST("/campaigns", c.AddCampaign, m.IsLoggedIn(), m.IsCompany)
 	v1.POST("/campaigns/documents", c.AddDocument, m.IsLoggedIn(), m.IsCompany)
 	v1.GET("/campaigns/:id", c.FindcampaignByID, m.IsLoggedIn())
-	v1.GET("/campaigns/date", c.GetCampaignByDate, m.IsLoggedIn())
+	v1.GET("/campaigns", c.GetCampaigns, m.IsLoggedIn())
 	v1.GET("/campaigns/social-media", c.GetAllSocialMedia, m.IsLoggedIn())
 }
